# PROD-V2-Fyne-By-mc2i-2026

./: .dockerignore  .gitignore  .gitlab-ci.yml  .replit  ARCHITECTURE.md  CLAUDE.md  Dockerfile  add_domain_property.js  agent_response.json  create-admin-user.js  create-system-configuration.js  debug.ts  deploy.ps1  fix_app_route.txt  fix_complexity.txt  fix_cyber_step_function.txt  fix_domain.cjs  fix_domain_duplicates.cjs  fix_interview_route.txt  fix_phase_cyber.txt  fixed_section.txt  generate-password-hash.js  package-lock.json  package.json  push-cyberquest-schema.mjs  push-schema.js  push-schema.mjs  pyproject.toml  reference_app.html  replit.md  tailwind.config.ts  temp_amoa_code.txt  temp_backup_cyber.txt  temp_file.txt  temp_quiz.tsx  temp_start_scenario.ts  theme.json  theme.json.backup  tsconfig.json  update-schema.js  (+1 more)
COMMON/: index.ts  package.json  tsconfig.json
I_AM_AMOA/: master_prompt.txt
I_AM_CYBER/: index.ts  package.json  tsconfig.json
I_AM_CYBER_NEW/: index.ts  types.ts
I_AM_mc2i/: index.ts  package.json  tsconfig.json
attached_assets/: Pasted--1-CyberEscape-L-infiltration-inverse-But-Tu-joues-un-responsable-cybers-curit-qui-doit-p-1746474760338.txt  Pasted--1-Data-Trainer-Se-former-son-rythme-Sous-titre-Approfondissez-les-bases-de-la-Data-Science-1746439601100.txt  Pasted--1-Gouvernance-Risque-et-Conformit-GRC-Ce-sont-les-m-tiers-orient-s-pilotage-et-strat-gie--1746658344646.txt  Pasted--Alerte-de-Cybers-curit-Bonjour-Responsable-Cybers-curit-Nous-sommes-le-03-04-2025-1743639453327.txt  (+113 more)
backup/: expert-learning.tsx  routes.ts.bak
(+1025 files in other folders)
